--- a/app/public/bin/css/toolbar.sass
+++ b/app/public/bin/css/toolbar.sass
@@ -36,7 +36,7 @@
       background-color: #333
     &#reload
       transition: 300ms
-      background-image: url("../arts/reload.png")
+      background-image: url("../../arts/reload.png")
       background-position: center
       background-size: contain
       background-repeat: no-repeat
@@ -64,25 +64,25 @@
 
     &#settings
       transition: 300ms
-      background-image: url("../arts/settings.png")
+      background-image: url("../../arts/settings.png")
       background-position: center
       background-size: contain
       background-repeat: no-repeat
     &#open-file
       transition: 300ms
-      background-image: url("../arts/open.png")
+      background-image: url("../../arts/open.png")
       background-position: center
       background-size: contain
       background-repeat: no-repeat
     &#save-file
       transition: 300ms
-      background-image: url("../arts/saveAs.png")
+      background-image: url("../../arts/saveAs.png")
       background-position: center
       background-size: contain
       background-repeat: no-repeat
     &#quick-save
       transition: 300ms
-      background-image: url("../arts/save.png")
+      background-image: url("../../arts/save.png")
       background-position: center
       background-size: contain
       background-repeat: no-repeat
@@ -178,7 +178,7 @@
     width: 50px
     transition: 200ms
     cursor: default
-    background-image: url("../arts/minimize.png")
+    background-image: url("../../arts/minimize.png")
     background-position: center
     background-size: contain
     background-repeat: no-repeat
@@ -196,7 +196,7 @@
     color: #aaa
     transition: 200ms
     cursor: default
-    background-image: url("../arts/maximize.png")
+    background-image: url("../../arts/maximize.png")
     background-position: center
     background-size: contain
     background-repeat: no-repeat
@@ -214,7 +214,7 @@
     color: #aaa
     transition: 200ms
     cursor: default
-    background-image: url("../arts/exit.png")
+    background-image: url("../../arts/exit.png")
     background-position: center
     background-size: contain
     background-repeat: no-repeat
@@ -299,7 +299,7 @@ canvas#move
   word-wrap: break-word
   border-radius: 0px
   margin: 2vw 10vw 2vw 10vw
-  background-image: url("../arts/chapterDoc.png")
+  background-image: url("../../arts/chapterDoc.png")
   background-size: 21mm 21mm
   background-position: left top
   background-repeat: no-repeat
@@ -457,11 +457,11 @@ canvas#move
     &:hover
       background-color: #555
     &#merge-all
-      background-image: url("../arts/merge.png")
+      background-image: url("../../arts/merge.png")
     &#print
-      background-image: url("../arts/printer.png")
+      background-image: url("../../arts/printer.png")
     &#print-view
-      background-image: url("../arts/printView.png")
+      background-image: url("../../arts/printView.png")
       .toggle
         position: relative
         left: 50%
@@ -534,25 +534,25 @@ canvas#move
       cursor: pointer
       vertical-align: middle
       &#trash
-        background-image: url('../arts/bin.png')
+        background-image: url('../../arts/bin.png')
         background-size: cover
         background-position: center
         &:hover
           background-color: #933
       &#move-btn
-        background-image: url('../arts/chain.png')
+        background-image: url('../../arts/chain.png')
         background-size: cover
         background-position: center
         &:hover
           background-color: #333
       &#merge-sel
-        background-image: url("../arts/mergeSel.png")
+        background-image: url("../../arts/mergeSel.png")
         background-size: cover
         background-position: center
         &:hover
           background-color: #333
       &#chapter-view
-        background-image: url("../arts/chapter.png")
+        background-image: url("../../arts/chapter.png")
         background-size: cover
         background-position: center
         border-left: 2px #444 dashed
@@ -608,7 +608,7 @@ disabled[disabled="false"]
       display: inline-block
       width: 40px
       height: 40px
-      background-image: url("../arts/ok.png")
+      background-image: url("../../arts/ok.png")
       background-position: center
       background-size: cover
       transition: 300ms
@@ -620,7 +620,7 @@ disabled[disabled="false"]
       display: inline-block
       width: 40px
       height: 40px
-      background-image: url("../arts/cancel.png")
+      background-image: url("../../arts/cancel.png")
       background-position: center
       background-size: cover
       transition: 300ms
@@ -706,7 +706,7 @@ disabled[disabled="false"]
         padding: 0
         transition: 300ms
         cursor: pointer
-        background-image: url('../arts/bin.png')
+        background-image: url('../../arts/bin.png')
         background-size: cover
         background-position: center
         &:hover
@@ -737,7 +737,7 @@ disabled[disabled="false"]
       padding: 0 10px 0 10px
       border: 1px solid $border
       transition: 300ms
-      background-image: url("../arts/image.png")
+      background-image: url("../../arts/image.png")
       background-position: center
       background-size: contain
       background-repeat: no-repeat
@@ -757,7 +757,7 @@ disabled[disabled="false"]
       padding: 0 10px 0 10px
       border: 1px solid $border
       transition: 300ms
-      background-image: url("../arts/fullView.png")
+      background-image: url("../../arts/fullView.png")
       background-position: center
       background-size: contain
       background-repeat: no-repeat
@@ -796,7 +796,7 @@ disabled[disabled="false"]
       margin: 5px 5px 5px 10px
       border: 1px solid $border
       transition: 300ms
-      background-image: url("../arts/alignLeft.png")
+      background-image: url("../../arts/alignLeft.png")
       background-position: center
       background-size: cover
       cursor: pointer
@@ -810,7 +810,7 @@ disabled[disabled="false"]
       margin: 5px
       border: 1px solid $border
       transition: 300ms
-      background-image: url("../arts/alignCenter.png")
+      background-image: url("../../arts/alignCenter.png")
       background-position: center
       background-size: cover
       cursor: pointer
@@ -824,7 +824,7 @@ disabled[disabled="false"]
       margin: 5px
       border: 1px solid $border
       transition: 300ms
-      background-image: url("../arts/alignRight.png")
+      background-image: url("../../arts/alignRight.png")
       background-position: center
       background-size: cover
       cursor: pointer
@@ -838,7 +838,7 @@ disabled[disabled="false"]
       margin: 5px
       border: 1px solid $border
       transition: 300ms
-      background-image: url("../arts/alignJustify.png")
+      background-image: url("../../arts/alignJustify.png")
       background-position: center
       background-size: cover
       cursor: pointer
@@ -861,7 +861,7 @@ disabled[disabled="false"]
 
   div#logo
     display: inline-block
-    background-image: url("../arts/logo2.png")
+    background-image: url("../../arts/logo2.png")
     background-position: center
     background-size: contain
     width: 50px
@@ -872,7 +872,7 @@ disabled[disabled="false"]
     div
       width: 100%
       height: 100%
-      background-image: url("../arts/logo2Hard.png")
+      background-image: url("../../arts/logo2Hard.png")
       background-position: center
       background-size: cover
       opacity: 0
@@ -933,4 +933,4 @@ disabled[disabled="false"]
 
 @font-face
   font-family: Lato
-  src: url("../arts/lato.ttf")
+  src: url("../../arts/lato.ttf")
