--- a/app/public/bin/css/master.sass
+++ b/app/public/bin/css/master.sass
@@ -40,7 +40,7 @@ button,input,select,option
     top: 50%
     left: 50%
     transform: translate(-50%,-50%)
-    background-image: url("../arts/logo2.png")
+    background-image: url("../../arts/logo2.png")
     background-position: center
     background-size: cover
     background-repeat: no-repeat
@@ -51,7 +51,7 @@ button,input,select,option
       top: 50%
       left: 50%
       transform: translate(-50%,-50%)
-      background-image: url("../arts/logo2Hard.png")
+      background-image: url("../../arts/logo2Hard.png")
       background-position: center
       background-size: cover
       background-repeat: no-repeat
@@ -64,7 +64,7 @@ button,input,select,option
     top: 50%
     left: 50%
     transform: translate(0%,-35%)
-    background-image: url("../arts/bLogo.png")
+    background-image: url("../../arts/bLogo.png")
     background-position: center
     background-size: cover
     background-repeat: no-repeat
@@ -116,7 +116,7 @@ button,input,select,option
     height: 20px
     border-radius: 10px
     background-color: orange
-    background-image: url("../arts/arrowDiagonalS.png")
+    background-image: url("../../arts/arrowDiagonalS.png")
     background-position: center
     background-size: cover
     position: absolute
