--- a/app/public/bin/css/master.sass
+++ b/app/public/bin/css/master.sass
@@ -1,7 +1,5 @@
 @import "variables.sass"
 
-
-
 body
   margin: 0
   width: 100vw
@@ -91,24 +89,61 @@ button,input,select,option
     display: flex
     flex: 0 1 auto
 
-
-
-
-
-  iframe
-    padding: 70px
+  .resizer
+    display: inline-block
+    position: absolute
+    top: 0px
+    z-index: 10
     width: 210mm
-    height: 297mm
-    overflow: hidden
-    user-select: none
-    position: relative
-    transition: 150ms
-    box-shadow: 0 0 100px #111
-    margin: 100px 0 70px 0
-    background-color: #444
-    color: #aaa
-    border: 0
-    vertical-align: middle
+    padding: 0 70px 0 70px
+    height: 5px
+    background-color: transparent
+    transition: 100ms
+    &::before
+      display: inline-block
+      position: absolute
+      left: 100%
+      content: ""
+      width: 100vw
+      height: 5px
+      transform: translate(0,-5px)
+      background-color: transparent
+      transition: 300ms
+      border-bottom: 5px dotted transparent
+    &::after
+      display: inline-block
+      position: absolute
+      left: 0
+      content: ""
+      width: 100vw
+      height: 5px
+      transform: translate(-100%,-5px)
+      background-color: transparent
+      transition: 300ms
+      border-bottom: 5px dotted transparent
+    &:hover
+      background-color: orange
+      &::before
+        border-bottom: 5px dotted orange - 100
+      &::after
+        border-bottom: 5px dotted orange - 100
+
+  #iframe
+    text-align: center
+    iframe
+      padding: 70px
+      width: 210mm
+      height: 297mm
+      overflow: hidden
+      user-select: none
+      position: relative
+      transition: 150ms
+      box-shadow: 0 0 100px #111
+      margin: 100px 0 70px 0
+      background-color: #444
+      color: #aaa
+      border: 0
+      vertical-align: middle
 
   #sizer
     display: inline-block
