--- a/app/public/bin/css/master.sass
+++ b/app/public/bin/css/master.sass
@@ -76,7 +76,7 @@ button,input,select,option
   width: 210mm
   padding: 0 70px 0 70px
   height: 5px
-  background-color: rgba(255,180,0,0.5)
+  background-color: transparent
   transition: 100ms
   z-index: 1
   &.left
@@ -84,6 +84,41 @@ button,input,select,option
     width: 5px
     height: 297mm
     padding: 70px 0 70px 0
+    &::before
+      display: inline-block
+      position: absolute
+      top: 0%
+      left: 0%
+      content: ""
+      background-color: transparent
+      transition: 300ms
+      opacity: 0.5
+      width: 5px
+      height: 100vw
+      transform: translate(-5px,-100%)
+      border-right: 5px dotted rgba(150,80,0,0.3)
+      border-bottom: none
+    &::after
+      display: inline-block
+      position: absolute
+      left: 0%
+      top: 100%
+      content: ""
+      background-color: transparent
+      transition: 300ms
+      opacity: 0.5
+      width: 5px
+      height: 100vw
+      transform: translate(-5px,0)
+      border-right: 5px dotted rgba(150,80,0,0.3)
+      border-bottom: none
+    &:hover
+      &::before
+        border-right: 5px dotted orange - 100
+        border-bottom: none
+      &::after
+        border-right: 5px dotted orange - 100
+        border-bottom: none
   &::before
     display: inline-block
     position: absolute
@@ -94,7 +129,7 @@ button,input,select,option
     transform: translate(0,-5px)
     background-color: transparent
     transition: 300ms
-    border-bottom: 5px dotted transparent
+    border-bottom: 5px dotted rgba(150,80,0,0.3)
     opacity: 0.5
   &::after
     display: inline-block
@@ -106,10 +141,10 @@ button,input,select,option
     transform: translate(-100%,-5px)
     background-color: transparent
     transition: 300ms
-    border-bottom: 5px dotted transparent
+    border-bottom: 5px dotted rgba(150,80,0,0.3)
     opacity: 0.5
   &:hover
-    background-color: orange
+    background-color: rgba(250,180,0,0.5)
     &::before
       border-bottom: 5px dotted orange - 100
     &::after
