--- a/app/public/bin/css/master.css
+++ b/app/public/bin/css/master.css
@@ -20,6 +20,8 @@ button, input, select, option {
   width: 100%;
   display: block;
   flex: 0;
+  position: relative;
+  z-index: 3;
   background: linear-gradient(transparent, #1a1a1a);
 }
 
@@ -89,14 +91,14 @@ button, input, select, option {
   z-index: 1;
 }
 
-.resizer.left {
+.resizer.left, .resizer.right {
   margin-top: 70px;
   width: 5px;
   height: 297mm;
   padding: 70px 0 70px 0;
 }
 
-.resizer.left::before {
+.resizer.left::before, .resizer.right::before {
   display: inline-block;
   position: absolute;
   top: 0%;
@@ -112,7 +114,7 @@ button, input, select, option {
   border-bottom: none;
 }
 
-.resizer.left::after {
+.resizer.left::after, .resizer.right::after {
   display: inline-block;
   position: absolute;
   left: 0%;
@@ -128,12 +130,12 @@ button, input, select, option {
   border-bottom: none;
 }
 
-.resizer.left:hover::before {
+.resizer.left:hover::before, .resizer.right:hover::before {
   border-right: 5px dotted #9b4100;
   border-bottom: none;
 }
 
-.resizer.left:hover::after {
+.resizer.left:hover::after, .resizer.right:hover::after {
   border-right: 5px dotted #9b4100;
   border-bottom: none;
 }
