--- a/app/public/bin/css/master.css
+++ b/app/public/bin/css/master.css
@@ -3,7 +3,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: black;
-  background: radial-gradient(#333, #222);
+  background: #222;
   overflow-x: hidden;
   text-align: center;
   overflow: hidden;
@@ -22,7 +22,6 @@ button, input, select, option {
   flex: 0;
   position: relative;
   z-index: 3;
-  background: linear-gradient(transparent, #1a1a1a);
 }
 
 #all {
@@ -87,8 +86,8 @@ button, input, select, option {
   padding: 0 70px 0 70px;
   height: 5px;
   background-color: transparent;
-  transition: 100ms;
   z-index: 1;
+  transition: background-color 200ms;
 }
 
 .resizer.left, .resizer.right {
@@ -101,6 +100,7 @@ button, input, select, option {
 .resizer.left::before, .resizer.right::before {
   display: inline-block;
   position: absolute;
+  z-index: -5;
   top: 0%;
   left: 0%;
   content: "";
@@ -110,11 +110,12 @@ button, input, select, option {
   width: 5px;
   height: 100vw;
   transform: translate(-5px, -100%);
-  border-right: 5px dotted rgba(150, 80, 0, 0.3);
+  border-right: 5px dashed rgba(150, 80, 0, 0.3);
   border-bottom: none;
 }
 
 .resizer.left::after, .resizer.right::after {
+  z-index: -5;
   display: inline-block;
   position: absolute;
   left: 0%;
@@ -126,23 +127,24 @@ button, input, select, option {
   width: 5px;
   height: 100vw;
   transform: translate(-5px, 0);
-  border-right: 5px dotted rgba(150, 80, 0, 0.3);
+  border-right: 5px dashed rgba(150, 80, 0, 0.3);
   border-bottom: none;
 }
 
 .resizer.left:hover::before, .resizer.right:hover::before {
-  border-right: 5px dotted #9b4100;
+  border-right: 5px dashed #9b4100;
   border-bottom: none;
 }
 
 .resizer.left:hover::after, .resizer.right:hover::after {
-  border-right: 5px dotted #9b4100;
+  border-right: 5px dashed #9b4100;
   border-bottom: none;
 }
 
 .resizer::before {
   display: inline-block;
   position: absolute;
+  z-index: -5;
   left: 100%;
   content: "";
   width: 100vw;
@@ -150,13 +152,14 @@ button, input, select, option {
   transform: translate(0, -5px);
   background-color: transparent;
   transition: 300ms;
-  border-bottom: 5px dotted rgba(150, 80, 0, 0.3);
+  border-bottom: 5px dashed rgba(150, 80, 0, 0.3);
   opacity: 0.5;
 }
 
 .resizer::after {
   display: inline-block;
   position: absolute;
+  z-index: -5;
   left: 0;
   content: "";
   width: 100vw;
@@ -164,7 +167,7 @@ button, input, select, option {
   transform: translate(-100%, -5px);
   background-color: transparent;
   transition: 300ms;
-  border-bottom: 5px dotted rgba(150, 80, 0, 0.3);
+  border-bottom: 5px dashed rgba(150, 80, 0, 0.3);
   opacity: 0.5;
 }
 
@@ -173,11 +176,11 @@ button, input, select, option {
 }
 
 .resizer:hover::before {
-  border-bottom: 5px dotted #9b4100;
+  border-bottom: 5px dashed #9b4100;
 }
 
 .resizer:hover::after {
-  border-bottom: 5px dotted #9b4100;
+  border-bottom: 5px dashed #9b4100;
 }
 
 .iframe {
@@ -220,7 +223,7 @@ button, input, select, option {
   user-select: none;
   position: relative;
   transition: 150ms;
-  box-shadow: 0 0 100px #111;
+  box-shadow: 0 0 64px #333;
   margin: 100px 0 70px 0;
   background-color: #444;
   color: #aaa;
