--- a/app/public/bin/css/master.sass
+++ b/app/public/bin/css/master.sass
@@ -75,16 +75,13 @@ button,input,select,option
   top: 0px
   z-index: 10
   width: 210mm
-  padding: 0 70px 0 70px
   height: 5px
   background-color: transparent
   z-index: 1
   transition: background-color 200ms
   &.left, &.right
-    margin-top: 70px
     width: 5px
     height: 297mm
-    padding: 70px 0 70px 0
     &::before
       display: inline-block
       position: absolute
@@ -98,7 +95,7 @@ button,input,select,option
       width: 5px
       height: 100vw
       transform: translate(-5px,-100%)
-      border-right: 5px dashed rgba(150,80,0,0.3)
+      border-right: 5px dashed rgba(0,0,0,0.3)
       border-bottom: none
     &::after
       z-index: -5
@@ -113,7 +110,7 @@ button,input,select,option
       width: 5px
       height: 100vw
       transform: translate(-5px,0)
-      border-right: 5px dashed rgba(150,80,0,0.3)
+      border-right: 5px dashed rgba(0,0,0,0.3)
       border-bottom: none
     &:hover
       &::before
@@ -133,7 +130,7 @@ button,input,select,option
     transform: translate(0,-5px)
     background-color: transparent
     transition: 300ms
-    border-bottom: 5px dashed rgba(150,80,0,0.3)
+    border-bottom: 5px dashed rgba(0,0,0,0.3)
     opacity: 0.5
   &::after
     display: inline-block
@@ -146,7 +143,7 @@ button,input,select,option
     transform: translate(-100%,-5px)
     background-color: transparent
     transition: 300ms
-    border-bottom: 5px dashed rgba(150,80,0,0.3)
+    border-bottom: 5px dashed rgba(0,0,0,0.3)
     opacity: 0.5
   &:hover
     background-color: rgba(250,180,0,0.5)
@@ -179,7 +176,7 @@ button,input,select,option
   #iframe
     text-align: center
     iframe
-      padding: 70px
+      // padding: 70px
       width: 210mm
       height: 297mm
       overflow: hidden
