--- a/app/public/bin/css/master.sass
+++ b/app/public/bin/css/master.sass
@@ -189,6 +189,8 @@ button,input,select,option
       color: #aaa
       border: 0
       vertical-align: middle
+      &[name="clone"]
+        background-color: #333
 
   #sizer
     display: inline-block
