--- a/app/public/bin/css/master.sass
+++ b/app/public/bin/css/master.sass
@@ -89,14 +89,12 @@ button,input,select,option
       top: 0%
       left: 0%
       content: ""
-      background-color: transparent
+      background: linear-gradient(transparent,#1a1a1a)
       transition: 300ms
       opacity: 0.5
       width: 5px
-      height: 100vw
-      transform: translate(-5px,-100%)
-      border-right: 5px dashed rgba(0,0,0,0.3)
-      border-bottom: none
+      height: 100px
+      transform: translate(0,-100%)
     &::after
       z-index: -5
       display: inline-block
@@ -104,33 +102,27 @@ button,input,select,option
       left: 0%
       top: 100%
       content: ""
-      background-color: transparent
+      background: linear-gradient(0deg,transparent,#1a1a1a)
       transition: 300ms
       opacity: 0.5
       width: 5px
-      height: 100vw
-      transform: translate(-5px,0)
-      border-right: 5px dashed rgba(0,0,0,0.3)
-      border-bottom: none
+      height: 100px
+      transform: translate(0,0)
     &:hover
       &::before
-        border-right: 5px dashed orange - 100
-        border-bottom: none
+        background: linear-gradient(transparent,orange - 100)
       &::after
-        border-right: 5px dashed orange - 100
-        border-bottom: none
+        background: linear-gradient(0deg,transparent,orange - 100)
   &::before
     display: inline-block
     position: absolute
     z-index: -5
     left: 100%
     content: ""
-    width: 100vw
+    width: 100px
     height: 5px
-    transform: translate(0,-5px)
-    background-color: transparent
+    background: linear-gradient(-90deg,transparent,#1a1a1a)
     transition: 300ms
-    border-bottom: 5px dashed rgba(0,0,0,0.3)
     opacity: 0.5
   &::after
     display: inline-block
@@ -138,19 +130,18 @@ button,input,select,option
     z-index: -5
     left: 0
     content: ""
-    width: 100vw
+    width: 100px
     height: 5px
-    transform: translate(-100%,-5px)
-    background-color: transparent
+    transform: translate(-100%,0)
+    background: linear-gradient(90deg,transparent,#1a1a1a)
     transition: 300ms
-    border-bottom: 5px dashed rgba(0,0,0,0.3)
     opacity: 0.5
   &:hover
     background-color: rgba(250,180,0,0.5)
     &::before
-      border-bottom: 5px dashed orange - 100
+      background: linear-gradient(-90deg,transparent,orange - 100)
     &::after
-      border-bottom: 5px dashed orange - 100
+      background: linear-gradient(90deg,transparent,orange - 100)
 
 
 .iframe
