--- a/app/public/bin/css/toolbar.css
+++ b/app/public/bin/css/toolbar.css
@@ -1072,7 +1072,7 @@ disabled[disabled="false"] {
 
 .toolbar div#logo {
   display: inline-block;
-  background-image: url("../../arts/logo2.png");
+  background-image: url("../../arts/logo.png");
   background-position: center;
   background-size: contain;
   width: 50px;
@@ -1085,7 +1085,7 @@ disabled[disabled="false"] {
 .toolbar div#logo div {
   width: 100%;
   height: 100%;
-  background-image: url("../../arts/logo2Hard.png");
+  background-image: url("../../arts/logoHard.png");
   background-position: center;
   background-size: cover;
   opacity: 0;
