--- a/app/public/bin/css/toolbar.sass
+++ b/app/public/bin/css/toolbar.sass
@@ -861,7 +861,7 @@ disabled[disabled="false"]
 
   div#logo
     display: inline-block
-    background-image: url("../../arts/logo2.png")
+    background-image: url("../../arts/logo.png")
     background-position: center
     background-size: contain
     width: 50px
@@ -872,7 +872,7 @@ disabled[disabled="false"]
     div
       width: 100%
       height: 100%
-      background-image: url("../../arts/logo2Hard.png")
+      background-image: url("../../arts/logoHard.png")
       background-position: center
       background-size: cover
       opacity: 0
