--- a/app/public/bin/css/master.sass
+++ b/app/public/bin/css/master.sass
@@ -39,7 +39,7 @@ button,input,select,option
     top: 50%
     left: 50%
     transform: translate(-50%,-50%)
-    background-image: url("../../arts/logo2.png")
+    background-image: url("../../arts/logo.png")
     background-position: center
     background-size: cover
     background-repeat: no-repeat
@@ -50,7 +50,7 @@ button,input,select,option
       top: 50%
       left: 50%
       transform: translate(-50%,-50%)
-      background-image: url("../../arts/logo2Hard.png")
+      background-image: url("../../arts/logoHard.png")
       background-position: center
       background-size: cover
       background-repeat: no-repeat
