--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 body {
   background-color: #333;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 h1#welcome1 {
@@ -21,12 +23,104 @@ div#cont {
   opacity: 0;
   transform: translate(0, 10vh);
   transition: opacity 700ms, transform 700ms;
+  perspective: 1000px;
+  text-align: center;
+  position: relative;
+  top: 90px;
 }
 
-div#cont h2#welcome2 {
+div#cont div.flex {
+  display: flex;
+}
+
+div#cont div.flex div#download {
+  text-align: center;
+  font-size: 20px;
   color: white;
   font-family: Lato;
   text-align: center;
+  margin-bottom: 100px;
+  flex: 1;
+  vertical-align: middle;
+  user-select: none;
+}
+
+div#cont div.flex div#download div {
+  display: inline-block;
+  position: relative;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+div#cont div.flex div#download button {
+  background-color: #222;
+  border: 1px solid #2a2a2a;
+  color: white;
+  padding: 25px;
+  font-size: 25px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: 300ms;
+  outline: none;
+  user-select: none;
+}
+
+div#cont div.flex div#download button:hover {
+  background-color: #2a2a2a;
+  box-shadow: 10px 0 0 #222, -10px 0 0 #222;
+}
+
+div#cont div.flex div#download button span {
+  vertical-align: middle;
+  font-weight: 100;
+}
+
+div#cont div.flex div#download button img {
+  vertical-align: middle;
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+}
+
+div#cont div.flex img#odyssey {
+  vertical-align: middle;
+  flex: 1;
+  margin-top: 100px;
+  display: inline-block;
+  width: 90vh;
+  height: 80vh;
+  position: relative;
+  z-index: 2;
+  transform: rotateY(10deg) rotateX(0deg) translate(25%, 0);
+  box-shadow: -0px -0px 25px #1a1a1a, -50px -50px 15px #2a2a2a;
+}
+
+header {
+  background-color: #2a2a2a;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 10;
+}
+
+header img {
+  display: inline-block;
+  width: 75px;
+  height: 75px;
+  vertical-align: middle;
+}
+
+header p {
+  display: inline-block;
+  vertical-align: middle;
+  font-family: Lato;
+  font-size: 50px;
+  color: #aaa;
+  margin: 15px 0 15px 0;
+  user-select: none;
 }
 
 @font-face {
