--- a/src/style.sass
+++ b/src/style.sass
@@ -5,6 +5,7 @@ body
 
 h1#welcome1
   font-size: 50px
+  font-weight: 100
   color: white
   font-family: Lato
   position: absolute
@@ -24,6 +25,7 @@ div#cont
   text-align: center
   position: relative
   top: 90px
+  font-weight: 100
   div.flex
     display: flex
     div#download
@@ -36,6 +38,7 @@ div#cont
       flex: 1
       vertical-align: middle
       user-select: none
+      font-weight: 100
       div
         display: inline-block
         position: relative
@@ -93,6 +96,7 @@ header
     display: inline-block
     vertical-align: middle
     font-family: Lato
+    font-weight: 100
     font-size: 50px
     color: #aaa
     margin: 15px 0 15px 0
