--- a/src/style.sass
+++ b/src/style.sass
@@ -4,8 +4,21 @@ body
   overflow-x: hidden
   user-select: none
 
+
 d
-  color: #222
+  color: #111
+d1
+  display: block
+  font-size: 30px
+  margin: 30px
+d2
+  display: block
+  font-size: 24px
+  margin: 20px
+d3
+  display: block
+  font-size: 18px
+  margin: 10px
 
 side
   display: flex
@@ -18,7 +31,7 @@ side
     left: 50%
     transform: translate(-50%,0)
     width: 50vw
-    h3
+    d3
       margin-left: 30px
   img#contact
     border-radius: 50%
@@ -66,12 +79,12 @@ side
     color: #ddd
     font-family: Lato, Verdana, sans-serif
     text-align: center
-    h1#title
+    d1#title
       display: inline-block
       margin: 30px 30px 0 30px
       padding: 10px
       border-bottom: 4px #222 dashed
-    h2#download
+    d2#download
       font-size: 40px
     button#download
       color: white
